feat: Major refactor - integrate Kolosal Server and replace direct model communication
- Replace direct model communication with KolosalClient-based architecture
- Add KolosalServerLauncher for automatic server lifecycle management
- Integrate server startup/shutdown in main application flow
- Update ModelInterface to use KolosalClient instead of direct HTTP calls
- Refactor RetrievalManager to use client-server architecture
- Add server management endpoints to HTTP API
- Update configuration to use local server (127.0.0.1:8081)
- Fix logger macro naming conflicts (DEBUG -> DEBUG_LVL, etc.)
- Modernize test infrastructure with GoogleTest integration
- Update CMake build system for new dependencies
- Remove embedded model configurations in favor of server-based models

Breaking Changes:
- ModelInterface API changed from direct HTTP to client-based
- Configuration format updated for server-based architecture
- RetrievalManager now requires running Kolosal Server
- Test framework migrated from custom to GoogleTest

This change establishes a clean separation between the agent system and
model inference, enabling better scalability and maintainability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,8 @@ endif()
 include_directories(include)
 
 # External libraries setup
+add_subdirectory(external)
+
 set(NLOHMANN_JSON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external/nlohmann")
 if(EXISTS "${NLOHMANN_JSON_DIR}/json.hpp")
     include_directories(${NLOHMANN_JSON_DIR})
@@ -145,7 +147,9 @@ set(CORE_SOURCES
     src/core/agent_manager.cpp
     src/core/agent_config.cpp
     src/core/model_interface.cpp
+    src/core/kolosal_client.cpp
     src/core/logger.cpp
+    src/core/kolosal_server_launcher.cpp
     src/core/main.cpp
 )
 
