--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 server:
   port: 8081
-  host: 0.0.0.0
+  host: 127.0.0.1
   idle_timeout: 300
   allow_public_access: false
   allow_internet_access: false
@@ -53,13 +53,13 @@ search:
   default_category: general
 database:
   vector_database: qdrant
-  retrieval_embedding_model: qwen3-embedding-0.6b
+  retrieval_embedding_model: ""
   qdrant:
     enabled: true
     host: localhost
     port: 6333
     collection_name: documents
-    default_embedding_model: qwen3-embedding-0.6b
+    default_embedding_model: ""
     timeout: 30
     api_key: ""
     max_connections: 10
@@ -76,8 +76,8 @@ database:
     gpu_device: 0
     metric_type: IP
 models:
-  - id: gemma3-1b
-    path: D:\Works\Genta\codes\kolosal-agent\build\Debug\models\google_gemma-3-1b-it_q4_k_m.gguf
+  - id: qwen2.5-0.5b
+    path: D:\Works\Genta\codes\kolosal-agent\models\qwen2.5-0.5b-instruct-q4_k_m.gguf
     type: llm
     load_immediately: true
     main_gpu_id: 0
@@ -90,26 +90,9 @@ models:
       n_parallel: 1
       cont_batching: true
       warmup: false
-      n_gpu_layers: 100
+      n_gpu_layers: 0
       n_batch: 2048
       n_ubatch: 512
-  - id: qwen3-embedding-0.6b
-    path: D:\Works\Genta\codes\kolosal-agent\https:\huggingface.co\kolosal\qwen3-embedding-0.6b\resolve\main\Qwen3-Embedding-0.6B-Q8_0.gguf
-    type: embedding
-    load_immediately: true
-    main_gpu_id: 0
-    inference_engine: llama-cpu
-    load_params:
-      n_ctx: 512
-      n_keep: 0
-      use_mmap: true
-      use_mlock: false
-      n_parallel: 2
-      cont_batching: true
-      warmup: false
-      n_gpu_layers: 100
-      n_batch: 256
-      n_ubatch: 64
 inference_engines:
   - name: llama-cpu
     library_path: D:\Works\Genta\codes\kolosal-agent\build\Debug\llama-cpu.dll
