--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -3,7 +3,7 @@
 # Only add subdirectories that are NOT already handled by the main CMakeLists.txt
 
 # GoogleTest (when building tests) - only if not already added
-if(BUILD_TESTS AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt" AND NOT TARGET gtest)
+if((BUILD_TESTS OR BUILD_TEST_EXECUTABLE) AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt" AND NOT TARGET gtest)
     # Force GoogleTest to use dynamic runtime to match the main project
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
     add_subdirectory(googletest)
